Implement caching and optimizations for block and chunk management
- Introduced LRU-like caching in BlockGrid to minimize repeated world.getBlockAt() calls.
- Refactored VillagerActivityPolicy to streamline movement checks.
- Optimized VillagerOptimizer by removing unnecessary ArrayList instantiation during iteration.
- Added ChunkRegionBridge for managing chunk loading and access tracking.
- Created AsyncChunkProcessor for handling asynchronous chunk operations.
- Implemented ChunkHotnessUpdater to manage chunk hotness based on player proximity.
- Developed ChunkLifecycleManager to manage chunk unloading based on activity.
- Added dynamic view distance adjustments in ChunkViewDistanceOptimizer.
- Introduced Rust-style memory management classes: RustArena, RustCow, RustOption, RustResult, RustScope, and RustSpan for efficient object allocation and error handling.